--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>We will heberge this site</h1>
+        <h1>We will host this site</h1>
         <p>Nothing much</p>
     </div>
 </body>
